My header design are complete

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +13,46 @@
   </head>
   <body>
     <!-- start header section  -->
-    <header></header>
+    <header>
+      <section class="min-h-svh bg-[#0D6EFD0D] mt-7">
+        <div class="flex justify-between ml-20 mr-20 pt-10">
+          <div>
+            <p class="text-black font-medium">Hot Gadgets</p>
+          </div>
+          <div>
+            <button
+              onclick="alert('The task is still pending')"
+              class="btn btn-outline btn-primary text-white"
+            >
+              Sign Up
+            </button>
+          </div>
+        </div>
+        <div class="flex justify-center items-center">
+          <div>
+            <h2 class="text-center text-3xl text-black font-bold mb-3">Apple Iphone 13 Pro Max</h2>
+            <p class="text-center text-sm text-[#706F6F]">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority <br />
+              <pre class="text-[#706F6F] text-sm">    have suffered alteration in some form, by injected humou.</pre>
+            </p>
+            <div class="text-center mt-3">
+                <button
+              onclick="alert('The task is still pending')"
+              class="btn btn-outline btn-primary text-white"
+            >
+              Buy Now
+            </button>
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-center">
+            <div>
+                <img class="w-[1200px]" src="image/iPhone-Symbol.png" alt="" srcset="">
+            </div>
+        </div>
+      </section>
+    </header>
     <!-- end header section  -->
     <!-- start main section  -->
     <main></main>
