I complete my search section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,41 @@
     </header>
     <!-- end header section  -->
     <!-- start main section  -->
-    <main></main>
+    <main>
+      <section class="min-h-screen">
+        <h3 class="text-3xl text-black font-bold text-center mt-10">
+          Search your phone
+        </h3>
+
+        <!-- search ber  -->
+        <div class="flex justify-center mt-4">
+          <div
+            class="flex justify-between border pr-0 rounded-xl w-full max-w-[600px]"
+          >
+            <div class="flex items-center gap-2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 16 16"
+                fill="currentColor"
+                class="h-4 w-4 opacity-70"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                  clip-rule="evenodd"
+                />
+              </svg>
+              <input type="text" placeholder="search here" />
+            </div>
+            <button class="bg-[#0D6EFD] rounded-xl text-white p-2">
+              search here
+            </button>
+          </div>
+        </div>
+        <!-- show the data  -->
+        <div></div>
+      </section>
+    </main>
     <!-- end main section  -->
     <!-- start footer section  -->
     <footer></footer>
