I show phone data using api

--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@
           </div>
         </div>
         <!-- show the data  -->
-        <div></div>
+        <div class="flex justify-center">
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2"
+            id="container_all_data"
+          ></div>
+        </div>
       </section>
     </main>
     <!-- end main section  -->
