I add search option in my project

--- a/index.html
+++ b/index.html
@@ -98,9 +98,12 @@
                   clip-rule="evenodd"
                 />
               </svg>
-              <input type="text" placeholder="search here" />
+              <input id="input" type="text" placeholder="search here" />
             </div>
-            <button class="bg-[#0D6EFD] rounded-xl text-white p-2">
+            <button
+              onclick="search_your_phone()"
+              class="bg-[#0D6EFD] rounded-xl text-white p-2"
+            >
               search here
             </button>
           </div>
