--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-2"
             id="container_all_data"
           ></div>
+          <!-- button show all -->
+        </div>
+        <div class="flex justify-center mt-10">
+          <div>
+            <button class="bg-[#0D6EFD] p-3 rounded-xl text-white font-bold">
+              Show All
+            </button>
+          </div>
         </div>
       </section>
     </main>
