I wright a code that can show the show all button when total data is more then 12

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
         </div>
         <div class="flex justify-center mt-10">
           <div>
-            <button class="bg-[#0D6EFD] p-3 rounded-xl text-white font-bold">
+            <button
+              id="show_all"
+              class="bg-[#0D6EFD] p-3 rounded-xl text-white font-bold hidden"
+            >
               Show All
             </button>
           </div>
