I wright a code that can add loader

--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
             </button>
           </div>
         </div>
+        <!-- section of spinear  -->
+        <div>
+          <div class="flex justify-center">
+            <span
+              id="loader_part"
+              class="loading loading-dots loading-lg w-52 hidden"
+            ></span>
+          </div>
+        </div>
         <!-- show the data  -->
         <div class="flex justify-center">
           <div
