In this program we can see all data using show all

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         <div class="flex justify-center mt-10">
           <div>
             <button
+              onclick="show_all()"
               id="show_all"
               class="bg-[#0D6EFD] p-3 rounded-xl text-white font-bold hidden"
             >
